# dmc

./: Makefile  README.md
dmc/: CMakeLists.txt  UserInterface.cpp  main.cpp  tests.cpp
dmc/include/: UserInterface.hpp
dmc/include/dmc/: UserInterface.hpp
dmc/src/: UserInterface.cpp
src/: CMakeLists.txt  main.cpp  tests.cpp
